# cpplintwrapper

./: CMakeLists.txt  README.md  toolingCMake.txt
src/: CMakeLists.txt  main.cc
